Updated and optimized request